corpus/comments.txt
============================================
Simplest comment
============================================

-- Simple comments work

---

(program (comment))

============================================
Comments
============================================

--
-- single-line comment, below an empty single-line comment

--[[
a level 0 multi-line comment
--]]

--  [[
a level 0 multi-line comment
--]]

--[==[
a level 2 multi-line comment
we can stil lhave a ] in here
]==]

--  [==[
a level 2 multi-line comment
  ]==]

---

(program
  (comment)

  (comment)

  (comment)

  (comment)

  (comment)

  (comment))

============================================
In-line Comments
============================================

local a = 1 -- this is a comment

---

(program
  (local_variable_declaration (variable_declarator (identifier)) (number))
  (comment))

============================================
Comments - In between still fine.
============================================


--[==[
a level 2 multi-line comment
]==]

x = 1

--  [==[
a level 2 multi-line ]= comment
  ]==]


---

(program
  (comment)
  (variable_declaration
    (variable_declarator (identifier))
    (number))
  (comment))
