corpus/doxygen_comments.txt
============================================
Simple doxygen
============================================

---
function X()
end

----------

(program
  (function
    (function documentation)
    (function_name (identifier)) (parameters)))
