corpus/simple_fields.txt
============================================
Simple Fields
============================================

local x = 1

---

(program
  (local_variable_declaration
     (variable_declarator (identifier))
        (number)))
